updated sweep, more metrics and plots in epoch

--- a/scripts/denet_train.yml
+++ b/scripts/denet_train.yml
@@ -5,11 +5,15 @@ metric:
   name: loss
 parameters:
   lr:
-    values: [0.001, 0.005, 0.0005]
+    values: [ 0.1, 0.7,0.05]
   epochs:
     value: 27
+  batch_size: 
+    values : [128,512,1024]
+  cw_len:
+    values : [200,400,500,600,1000]
 early_terminate:
   type: hyperband
   s: 2
   eta: 3
-  max_iter: 27
+  max_iter: 4
