--- a/scripts/denet_train.yml
+++ b/scripts/denet_train.yml
@@ -5,7 +5,7 @@ metric:
   name: loss
 parameters:
   lr:
-    values: [ 0.1, 0.7,0.05]
+    values: [ 0.05]
   epochs:
     value: 27
   batch_size: 
