Remove sed_vis usage

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
-versioneer
-dcase-util
-easydict
-matplotlib
-numpy
-pandas
-pypandoc
-runx
-scikit-learn
-scipy
-simple-parsing
-torch
-torchaudio
-tqdm
-wandb
+PyAudio==0.2.13
+pybind11==2.10.4
+Cython==0.29.34
+numpy==1.23.5
+certifi==2022.12.7
+versioneer==0.28
+dcase-util==0.2.20
+easydict==1.10
+matplotlib==3.7.1
+pythran==0.12.1
+pandas==2.0.0
+pypandoc==1.11
+runx==0.0.11
+scikit-learn==1.2.2
+scipy==1.10.1
+simple-parsing==0.1.2
+torch==2.0.0
+torchaudio==2.0.1
+tqdm==4.65.0
+wandb==0.15.0
