--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ long_description_content_type = text/markdown
 
 # add the url to your repository/homepage and version release
 url = https://github.com/ArthurZucker/PAMAI
-download_url = https://github.com/ArthurZucker/PAMAI/archive/refs/tags/v1.0.0.tar.gz
+download_url = https://github.com/ArthurZucker/PAMAI/archive/refs/tags/v1.0.3.tar.gz
 
 # define your license and license file
 license = MIT
@@ -25,11 +25,7 @@ classifiers =
     Intended Audience :: Developers      
     Topic :: Software Development :: Build Tools
     License :: OSI Approved :: MIT License
-    Programming Language :: Python
     Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
-    Programming Language :: Python :: 3.11
 
 [options]
 install_requires =
@@ -54,4 +50,4 @@ install_requires =
     tqdm==4.65.0
     wandb==0.15.0
 
-python_requires = >=3.8
+python_requires = ==3.8
