Add finished initial Docker setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ long_description_content_type = text/markdown
 
 # add the url to your repository/homepage and version release
 url = https://github.com/ArthurZucker/PAMAI
-download_url = https://github.com/ArthurZucker/PAMAI/archive/refs/tags/v1.0.3.tar.gz
+download_url = https://github.com/ArthurZucker/PAMAI/archive/refs/tags/v1.0.4.tar.gz
 
 # define your license and license file
 license = MIT
@@ -50,4 +50,4 @@ install_requires =
     tqdm==4.65.0
     wandb==0.15.0
 
-python_requires = ==3.8
+python_requires = ~=3.8
